# sas_migrator

./: .gitignore  Dockerfile  Dockerfile.mvp1  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: client_config.yaml  databricks_config.yaml  snowflake_aws_config.yaml
examples/sample_output/: discovery_report.md
src/: cli.py
src/catalog/: catalog_generator.py
src/connectors/aws/: aws_connector.py
src/connectors/databricks/: databricks_connector.py
src/connectors/sas/: filesystem_scanner.py  metadata_connector.py  odbc_connector.py
src/connectors/snowflake/: snowflake_connector.py
src/llm/: llm_advisor.py  llm_client.py
src/migration/code_transpiler/: databricks_transpiler.py  snowflake_transpiler.py  transpiler.py
src/migration/data_migrator/: data_migrator.py  databricks_migrator.py  snowflake_migrator.py
src/parsers/sas/: lineage_builder.py  sas_code_parser.py  sas_code_validator.py  sas_data_parser.py
src/reporting/: pdf_generator.py  report_generator.py
src/services/: discovery_service.py  migration_service.py
src/utils/: config_loader.py  helpers.py  logger.py
src/validation/: validator.py
tests/: create_mock_environment.py  generate_mvp1_pdf.py  mock_config.yaml  run_docker_demo.py  run_full_report.py  run_mvp1_docker.py  run_mvp1_mvp2_report.py  run_mvp1_test.py  test_lineage_builder.py  test_llm_advisor.py  test_sas_code_parser.py  test_transpiler.py
tests/real_sas_programs/: base_financeiro.sas  base_usd.sas  calculo_rvr_msg.sas  calculo_rvr_mvida.sas
(+4 files in other folders)
